--- a/scenes.yaml
+++ b/scenes.yaml
@@ -1,26 +1,67 @@
 - id: '1730196425776'
   name: 'VoiceKit Defaults '
   entities:
-    light.voicekit_bureau_led_ring:
-      supported_color_modes:
-      - rgb
-      color_mode: rgb
-      brightness: 255
-      hs_color:
-      - 0
-      - 100
-      rgb_color:
-      - 255
-      - 0
-      - 0
-      xy_color:
-      - 0.701
-      - 0.299
-      icon: mdi:circle-outline
-      friendly_name: VoiceKit Bureau LED Ring
-      supported_features: 40
-      state: 'on'
-    light.voicekit_salon_dvt_led_ring:
+    select.vpe_salon_assistant:
+      options:
+      - preferred
+      - Cave Johnson
+      - GlaDOS
+      - "Local Nabu  \U0001F1EB\U0001F1F7"
+      - "Nabu GPT \U0001F1EB\U0001F1F7"
+      - "Nabu \U0001F1EB\U0001F1F7"
+      - "Nabu \U0001F1EC\U0001F1E7"
+      - Weatley
+      friendly_name: VPE Salon Assistant
+      state: preferred
+    select.vpe_bureau_assistant:
+      options:
+      - preferred
+      - Cave Johnson
+      - GlaDOS
+      - "Local Nabu  \U0001F1EB\U0001F1F7"
+      - "Nabu GPT \U0001F1EB\U0001F1F7"
+      - "Nabu \U0001F1EB\U0001F1F7"
+      - "Nabu \U0001F1EC\U0001F1E7"
+      - Weatley
+      friendly_name: VPE Bureau Assistant
+      state: preferred
+    select.vpe_chambre_assistant:
+      options:
+      - preferred
+      - Cave Johnson
+      - GlaDOS
+      - "Local Nabu  \U0001F1EB\U0001F1F7"
+      - "Nabu GPT \U0001F1EB\U0001F1F7"
+      - "Nabu \U0001F1EB\U0001F1F7"
+      - "Nabu \U0001F1EC\U0001F1E7"
+      - Weatley
+      friendly_name: VPE Chambre Assistant
+      state: preferred
+    select.vpe_cuisine_assistant:
+      options:
+      - preferred
+      - Cave Johnson
+      - GlaDOS
+      - "Local Nabu  \U0001F1EB\U0001F1F7"
+      - "Nabu GPT \U0001F1EB\U0001F1F7"
+      - "Nabu \U0001F1EB\U0001F1F7"
+      - "Nabu \U0001F1EC\U0001F1E7"
+      - Weatley
+      friendly_name: VPE Cuisine Assistant
+      state: preferred
+    select.vpe_chambre_marilou_assistant:
+      options:
+      - preferred
+      - Cave Johnson
+      - GlaDOS
+      - "Local Nabu  \U0001F1EB\U0001F1F7"
+      - "Nabu GPT \U0001F1EB\U0001F1F7"
+      - "Nabu \U0001F1EB\U0001F1F7"
+      - "Nabu \U0001F1EC\U0001F1E7"
+      - Weatley
+      friendly_name: VPE Chambre Marilou Assistant
+      state: preferred
+    light.vpe_salon_led_ring:
       supported_color_modes:
       - rgb
       color_mode: rgb
@@ -36,210 +77,224 @@
       - 0.455
       - 0.374
       icon: mdi:circle-outline
-      friendly_name: VoiceKit Salon LED Ring
+      friendly_name: VPE Salon LED Ring
       supported_features: 40
       state: 'on'
-    light.voicekit_chambre_led_ring:
+    light.vpe_bureau_led_ring:
       supported_color_modes:
       - rgb
       color_mode: rgb
       brightness: 168
       hs_color:
-      - 111.913
-      - 90.196
+      - 276.941
+      - 100
       rgb_color:
-      - 56
+      - 157
+      - 0
       - 255
-      - 25
       xy_color:
-      - 0.193
-      - 0.72
+      - 0.255
+      - 0.095
       icon: mdi:circle-outline
-      friendly_name: VoiceKit Chambre LED Ring
+      friendly_name: VPE Bureau LED Ring
       supported_features: 40
       state: 'on'
-    light.voicekit_chambre_marilou_led_ring:
+    light.vpe_chambre_led_ring:
       supported_color_modes:
       - rgb
       color_mode: rgb
       brightness: 168
       hs_color:
-      - 331.043
-      - 90.196
+      - 124
+      - 100
       rgb_color:
+      - 0
       - 255
-      - 25
-      - 136
+      - 17
       xy_color:
-      - 0.564
-      - 0.241
+      - 0.172
+      - 0.742
       icon: mdi:circle-outline
-      friendly_name: VoiceKit Chambre Marilou LED Ring
+      friendly_name: VPE Chambre LED Ring
       supported_features: 40
       state: 'on'
-    media_player.voicekit_salon_dvt_media_player:
+    light.vpe_cuisine_led_ring:
+      supported_color_modes:
+      - rgb
+      color_mode: rgb
+      brightness: 168
+      hs_color:
+      - 195.059
+      - 100
+      rgb_color:
+      - 0
+      - 191
+      - 255
+      xy_color:
+      - 0.146
+      - 0.238
+      icon: mdi:circle-outline
+      friendly_name: VPE Cuisine LED Ring
+      supported_features: 40
+      state: 'on'
+    light.vpe_chambre_marilou_led_ring:
+      supported_color_modes:
+      - rgb
+      color_mode: rgb
+      brightness: 168
+      hs_color:
+      - 298.824
+      - 100
+      rgb_color:
+      - 250
+      - 0
+      - 255
+      xy_color:
+      - 0.379
+      - 0.152
+      icon: mdi:circle-outline
+      friendly_name: VPE Chambre Marilou LED Ring
+      supported_features: 40
+      state: 'on'
+    media_player.vpe_salon_media_player:
       volume_level: 0.8
       is_volume_muted: false
       device_class: speaker
-      friendly_name: VoiceKit Salon Media Player
+      friendly_name: VPE Salon Media Player
       supported_features: 1200653
       state: idle
-    media_player.voicekit_bureau_media_player:
-      volume_level: 0.8000001
-      is_volume_muted: false
-      device_class: speaker
-      friendly_name: VoiceKit Bureau Media Player
-      supported_features: 1200653
-      state: idle
-    media_player.voicekit_chambre_media_player:
-      volume_level: 0.8000001
-      is_volume_muted: false
-      device_class: speaker
-      friendly_name: VoiceKit Chambre Media Player
-      supported_features: 1200653
-      state: idle
-    media_player.voicekit_chambre_marilou_media_player:
+    media_player.vpe_bureau_media_player:
       volume_level: 0.8
       is_volume_muted: false
       device_class: speaker
-      friendly_name: VoiceKit Chambre Marilou Media Player
+      friendly_name: VPE Bureau Media Player
       supported_features: 1200653
       state: idle
-    select.voicekit_salon_pipeline_d_assist:
-      options:
-      - preferred
-      - Cave Johnson
-      - GLaDOS
-      - "Local Nabu  \U0001F1EB\U0001F1F7"
-      - "Nabu GPT \U0001F1EB\U0001F1F7"
-      - "Nabu \U0001F1EB\U0001F1F7"
-      - "Nabu \U0001F1EC\U0001F1E7"
-      - Wheatley
-      icon: mdi:square-circle
-      friendly_name: VoiceKit Salon Assistant
-      state: preferred
-    select.voicekit_bureau_assistant:
-      options:
-      - preferred
-      - Cave Johnson
-      - GLaDOS
-      - "Local Nabu  \U0001F1EB\U0001F1F7"
-      - "Nabu GPT \U0001F1EB\U0001F1F7"
-      - "Nabu \U0001F1EB\U0001F1F7"
-      - "Nabu \U0001F1EC\U0001F1E7"
-      - Wheatley
-      icon: mdi:square-circle
-      friendly_name: VoiceKit Bureau Assistant
-      state: preferred
-    select.voicekit_chambre_pipeline_d_assist:
-      options:
-      - preferred
-      - Cave Johnson
-      - GLaDOS
-      - "Local Nabu  \U0001F1EB\U0001F1F7"
-      - "Nabu GPT \U0001F1EB\U0001F1F7"
-      - "Nabu \U0001F1EB\U0001F1F7"
-      - "Nabu \U0001F1EC\U0001F1E7"
-      - Wheatley
-      icon: mdi:square-circle
-      friendly_name: VoiceKit Chambre Assistant
-      state: preferred
-    select.voicekit_chambre_marilou_pipeline_d_assist:
-      options:
-      - preferred
-      - Cave Johnson
-      - GLaDOS
-      - "Local Nabu  \U0001F1EB\U0001F1F7"
-      - "Nabu GPT \U0001F1EB\U0001F1F7"
-      - "Nabu \U0001F1EB\U0001F1F7"
-      - "Nabu \U0001F1EC\U0001F1E7"
-      - Wheatley
-      icon: mdi:square-circle
-      friendly_name: VoiceKit Chambre Marilou Assistant
-      state: preferred
-    switch.voicekit_salon_dvt_wake_sound:
+    media_player.vpe_chambre_media_player:
+      volume_level: 0.8
+      is_volume_muted: false
+      device_class: speaker
+      friendly_name: VPE Chambre Media Player
+      supported_features: 1200653
+      state: idle
+    media_player.vpe_cuisine_media_player:
+      volume_level: 0.8
+      is_volume_muted: false
+      device_class: speaker
+      friendly_name: VPE Cuisine Media Player
+      supported_features: 1200653
+      state: idle
+    media_player.vpe_chambre_marilou_media_player:
+      volume_level: 0.8
+      is_volume_muted: false
+      device_class: speaker
+      friendly_name: VPE Chambre Marilou Media Player
+      supported_features: 1200653
+      state: idle
+    switch.vpe_salon_wake_sound:
       icon: mdi:bullhorn
-      friendly_name: VoiceKit Salon Wake sound
+      friendly_name: VPE Salon Wake sound
       state: 'on'
-    switch.voicekit_bureau_wake_sound:
+    switch.vpe_bureau_wake_sound:
       icon: mdi:bullhorn
-      friendly_name: VoiceKit Bureau Wake sound
+      friendly_name: VPE Bureau Wake sound
       state: 'on'
-    switch.voicekit_chambre_wake_sound:
+    switch.vpe_chambre_wake_sound:
       icon: mdi:bullhorn
-      friendly_name: VoiceKit Chambre Wake sound
+      friendly_name: VPE Chambre Wake sound
       state: 'on'
-    switch.voicekit_chambre_marilou_wake_sound:
+    switch.vpe_cuisine_wake_sound:
       icon: mdi:bullhorn
-      friendly_name: VoiceKit Chambre Marilou Wake sound
+      friendly_name: VPE Cuisine Wake sound
       state: 'on'
-    select.voicekit_salon_detection_de_fin_de_la_parole:
+    switch.vpe_chambre_marilou_wake_sound:
+      icon: mdi:bullhorn
+      friendly_name: VPE Chambre Marilou Wake sound
+      state: 'on'
+    select.vpe_salon_detection_de_fin_de_la_parole:
       options:
       - default
       - relaxed
       - aggressive
-      friendly_name: VoiceKit Salon Détection de fin de la parole
+      friendly_name: VPE Salon Détection de fin de la parole
       state: aggressive
-    select.voicekit_bureau_detection_de_fin_de_la_parole:
+    select.vpe_bureau_detection_de_fin_de_la_parole:
       options:
       - default
       - relaxed
       - aggressive
-      friendly_name: VoiceKit Bureau Détection de fin de la parole
+      friendly_name: VPE Bureau Détection de fin de la parole
       state: aggressive
-    select.voicekit_chambre_detection_de_fin_de_la_parole:
+    select.vpe_chambre_detection_de_fin_de_la_parole:
       options:
       - default
       - relaxed
       - aggressive
-      friendly_name: VoiceKit Chambre Détection de fin de la parole
+      friendly_name: VPE Chambre Détection de fin de la parole
       state: aggressive
-    select.voicekit_chambre_marilou_detection_de_fin_de_la_parole:
+    select.vpe_cuisine_detection_de_fin_de_la_parole:
       options:
       - default
       - relaxed
       - aggressive
-      friendly_name: VoiceKit Chambre Marilou Détection de fin de la parole
+      friendly_name: VPE Cuisine Détection de fin de la parole
+      state: aggressive
+    select.vpe_chambre_marilou_detection_de_fin_de_la_parole:
+      options:
+      - default
+      - relaxed
+      - aggressive
+      friendly_name: VPE Chambre Marilou Détection de fin de la parole
       state: aggressive
   icon: mdi:square-circle
   metadata:
-    light.voicekit_bureau_led_ring:
+    select.vpe_salon_assistant:
       entity_only: true
-    light.voicekit_salon_dvt_led_ring:
+    select.vpe_bureau_assistant:
       entity_only: true
-    light.voicekit_chambre_led_ring:
+    select.vpe_chambre_assistant:
       entity_only: true
-    light.voicekit_chambre_marilou_led_ring:
+    select.vpe_cuisine_assistant:
       entity_only: true
-    media_player.voicekit_salon_dvt_media_player:
+    select.vpe_chambre_marilou_assistant:
       entity_only: true
-    media_player.voicekit_bureau_media_player:
+    light.vpe_salon_led_ring:
       entity_only: true
-    media_player.voicekit_chambre_media_player:
+    light.vpe_bureau_led_ring:
       entity_only: true
-    media_player.voicekit_chambre_marilou_media_player:
+    light.vpe_chambre_led_ring:
       entity_only: true
-    select.voicekit_salon_pipeline_d_assist:
+    light.vpe_cuisine_led_ring:
       entity_only: true
-    select.voicekit_bureau_assistant:
+    light.vpe_chambre_marilou_led_ring:
       entity_only: true
-    select.voicekit_chambre_pipeline_d_assist:
+    media_player.vpe_salon_media_player:
       entity_only: true
-    select.voicekit_chambre_marilou_pipeline_d_assist:
+    media_player.vpe_bureau_media_player:
       entity_only: true
-    switch.voicekit_salon_dvt_wake_sound:
+    media_player.vpe_chambre_media_player:
       entity_only: true
-    switch.voicekit_bureau_wake_sound:
+    media_player.vpe_cuisine_media_player:
       entity_only: true
-    switch.voicekit_chambre_wake_sound:
+    media_player.vpe_chambre_marilou_media_player:
       entity_only: true
-    switch.voicekit_chambre_marilou_wake_sound:
+    switch.vpe_salon_wake_sound:
       entity_only: true
-    select.voicekit_salon_detection_de_fin_de_la_parole:
+    switch.vpe_bureau_wake_sound:
       entity_only: true
-    select.voicekit_bureau_detection_de_fin_de_la_parole:
+    switch.vpe_chambre_wake_sound:
       entity_only: true
-    select.voicekit_chambre_detection_de_fin_de_la_parole:
+    switch.vpe_cuisine_wake_sound:
       entity_only: true
-    select.voicekit_chambre_marilou_detection_de_fin_de_la_parole:
+    switch.vpe_chambre_marilou_wake_sound:
+      entity_only: true
+    select.vpe_salon_detection_de_fin_de_la_parole:
+      entity_only: true
+    select.vpe_bureau_detection_de_fin_de_la_parole:
+      entity_only: true
+    select.vpe_chambre_detection_de_fin_de_la_parole:
+      entity_only: true
+    select.vpe_cuisine_detection_de_fin_de_la_parole:
+      entity_only: true
+    select.vpe_chambre_marilou_detection_de_fin_de_la_parole:
       entity_only: true
